--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -132,7 +132,7 @@
        
     </form> 
 
-
+<h2>Hello This is the data of table</h2>
     <table class=" table table-bordered" id="tbl">
         <thead>
             <tr>
